# waterQualityDS

./: LICENSE  README.md  pyproject.toml
eda/: EDA.ipynb
tests/: test_waterqualityds.py
