[tool.poetry]
name = "waterQualityDS"
version = "0.1.0"
description = "Data Science project for Water Quality"
authors = ["stejul <https://github.com/stejul>"]

[tool.poetry.dependencies]
python = ">=3.7.1,<3.10"
scipy = "^1.7.0"
pandas = "^1.3.1"
matplotlib = "^3.4.2"
seaborn = "^0.11.1"
plotly = "^5.1.0"
jupyter = "^1.0.0"
notebook = "^6.4.0"
sklearn = "^0.0"
nbconvert = "^6.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
